welcome.lessons.welcome.bat.bool1.LastDigit.scala.error
lastDigit:6: error: not found: value flase
    return flase
           ^